--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 server.port=8083
 #H2 database
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/review
+spring.datasource.username=user-name
+spring.datasource.password=strong-password
+spring.jpa.database=postgresql
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
