Added eureka client in company and review services

--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8083
+spring.application.name=review-service
 #H2 database
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:test
@@ -13,3 +14,8 @@ spring.jpa.database=postgresql
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
