Used config from config server in job microservice

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=config-server
 
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.config.server.git.uri=https://github.com/stym1g/application-config.git
