--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -15,16 +15,21 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.routes[0].id=COMPANY_SERVICE
-spring.cloud.gateway.routes[0].uri=localhost:8081
-spring.cloud.gateway.routes[0].predicates[0]=Path=/companies
+spring.cloud.gateway.routes[0].uri=lb://COMPANY-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/companies/**
 
 spring.cloud.gateway.routes[1].id=job_service
-spring.cloud.gateway.routes[1].uri=http://localhost:8082/
+spring.cloud.gateway.routes[1].uri=lb://JOB-SERVICE-DEV
 spring.cloud.gateway.routes[1].predicates[0]=Path=/jobs/**
 
 spring.cloud.gateway.routes[2].id=review_service
-spring.cloud.gateway.routes[2].uri=http://localhost:8083/
+spring.cloud.gateway.routes[2].uri=lb://REVIEW-SERVICE
 spring.cloud.gateway.routes[2].predicates[0]=Path=/reviews/**
+
+spring.cloud.gateway.routes[3].id=review_service
+spring.cloud.gateway.routes[3].uri=http://localhost:8761/
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/main
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 
 #Logging
 logging.level.root=info
