--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=config-server
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761
 
 spring.cloud.config.server.git.uri=https://github.com/stym1g/application-config.git
+
+spring.main.web-application-type=reactive
