--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -31,6 +31,10 @@ spring.cloud.gateway.routes[3].uri=http://localhost:8761/
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/main
 spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 
+spring.cloud.gateway.routes[4].id=review_service_static
+spring.cloud.gateway.routes[4].uri=http://localhost:8761/
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+
 #Logging
 logging.level.root=info
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
