Added circuit breaker and fallback function for company ms if it is not available

--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -38,6 +38,11 @@ resilience4j.circuitbreaker.instances.companyBreaker.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.companyBreaker.register-health-indicator=true
 resilience4j.circuitbreaker.instances.companyBreaker.automatic-transition-from-open-to-half-open-enabled=true
 resilience4j.circuitbreaker.instances.companyBreaker.sliding-window-type=count_based
+#resilience4j.circuitbreaker.instances.companyBreaker=5
+#resilience4j.circuitbreaker.instances.wait-duration=2000ms
+resilience4j.retry.instances.companyBreaker.waitDuration=2000
+resilience4j.retry.instances.companyBreaker.maxAttempts=6
+
 
 # Actuator configuration
 management.health.circuitbreakers.enabled=true
