--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -43,6 +43,11 @@ resilience4j.circuitbreaker.instances.companyBreaker.sliding-window-type=count_b
 resilience4j.retry.instances.companyBreaker.waitDuration=2000
 resilience4j.retry.instances.companyBreaker.maxAttempts=6
 
+#Rate Limiter
+resilience4j.ratelimiter.instances.companyBreaker.timeout-duration=0
+resilience4j.ratelimiter.instances.companyBreaker.limit-refresh-period=4
+resilience4j.ratelimiter.instances.companyBreaker.limit-for-period=2
+
 
 # Actuator configuration
 management.health.circuitbreakers.enabled=true
