Preparing configuration profiles for dockerizing services

--- a/companyms/src/main/resources/application-docker.properties
+++ b/companyms/src/main/resources/application-docker.properties
@@ -2,8 +2,8 @@ job-service.url=http://job:8082
 company-service.url=http://company:8081
 review-service.url=http://review:8083
 
-server.port=8083
-spring.application.name=review-service
+server.port=8081
+spring.application.name=company-service
 #H2 database
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:test
@@ -11,7 +11,7 @@ spring.application.name=review-service
 #spring.jpa.show-sql=true
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/review
+spring.datasource.url=jdbc:postgresql://postgres:5432/company
 spring.datasource.username=user-name
 spring.datasource.password=strong-password
 spring.jpa.database=postgresql
@@ -20,11 +20,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #Zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 #RabbitMQ
