--- a/companyms/src/main/resources/application.properties
+++ b/companyms/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+job-service.url=http://localhost:8082
+company-service.url=http://localhost:8081
+review-service.url=http://localhost:8083
+
 server.port=8081
 spring.application.name=company-service
 #H2 database
