--- a/reviewms/src/main/resources/application-docker.properties
+++ b/reviewms/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
-job-service.url=http://job:8082
-company-service.url=http://company:8081
-review-service.url=http://review:8083
+job-service.url=http://localhost:8082
+company-service.url=http://localhost:8081
+review-service.url=http://localhost:8083
 
 server.port=8083
 spring.application.name=review-service
