--- a/jobms/src/main/resources/application-docker.properties
+++ b/jobms/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=http://job:8082
+company-service.url=http://company:8081
+review-service.url=http://review:8083
 
 server.port=8082
 spring.application.name=job-service
@@ -11,7 +11,7 @@ spring.application.name=job-service
 #spring.jpa.show-sql=true
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
+spring.datasource.url=jdbc:postgresql://postgres:5432/job
 spring.datasource.username=user-name
 spring.datasource.password=strong-password
 spring.jpa.database=postgresql
@@ -20,15 +20,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://servicereg:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #Zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 #Config Server
-spring.config.import=optional:configserver:http://localhost:8080
+spring.config.import=optional:configserver:http://config-server:8080
 spring.profiles.active=dev
 
 
