--- a/jobms/src/main/resources/application-docker.properties
+++ b/jobms/src/main/resources/application-docker.properties
@@ -30,7 +30,7 @@ management.tracing.sampling.probability=1.0
 
 #Config Server
 spring.config.import=optional:configserver:http://config-server:8080
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 
 # Resilience4J
