dockerize all service through docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,8 @@
 version: "3.8"
-networks:
-  company-review-app-ms_default:
-    external: true
 services:
-  db:
+  postgres:
     image: postgres
-    container_name: local_pgdb
+    container_name: postgres
     restart: always
     ports:
       - "5432:5432"
@@ -31,7 +28,8 @@ services:
     ports:
       - 9411:9411
     networks:
-      - company-review-app-ms_default
+      - microservice-network
+      - postgres
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -39,7 +37,95 @@ services:
       - 5672:5672
       - 15672:15672
     networks:
-      - company-review-app-ms_default
+      - microservice-network
+      - postgres
+  servicereg:
+    image: satyamg650/servicereg:latest
+    container_name: servicereg
+    platform: linux/amd64
+    ports:
+      - "8761:8761"
+    depends_on:
+      - rabbitmq
+      - zipkin
+      - postgres
+      - pgadmin
+    networks:
+      - microservice-network
+      - postgres
+  config-server-ms:
+    image: satyamg650/config-server-ms:latest
+    container_name: config-server-ms
+    platform: linux/amd64
+    ports:
+      - 8080:8080
+    depends_on:
+      - servicereg
+    networks:
+      - microservice-network
+      - postgres
+  gateway-ms:
+    image: satyamg650/gateway-ms:latest
+    container_name: gateway
+    platform: linux/amd64
+    ports:
+      - 8084:8084
+    depends_on:
+      - servicereg
+    networks:
+      - microservice-network
+      - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  companyms:
+    image: satyamg650/companyms:latest
+    container_name: company
+    platform: linux/amd64
+    ports:
+      - 8081:8081
+    depends_on:
+      - servicereg
+      - config-server-ms
+    networks:
+      - microservice-network
+      - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  jobms:
+    image: satyamg650/jobms:latest
+    container_name: job
+    platform: linux/amd64
+    ports:
+      - 8082:8082
+    depends_on:
+      - servicereg
+      - config-server-ms
+    networks:
+      - microservice-network
+      - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://servicereg:8761/eureka
+  reviewms:
+    image: satyamg650/reviewms:latest
+    container_name: review
+    platform: linux/amd64
+    ports:
+      - 8083:8083
+    depends_on:
+      - servicereg
+      - config-server-ms
+    networks:
+      - microservice-network
+      - postgres
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+
+networks:
+  microservice-network:
+    driver: bridge
+  postgres:
+    driver: bridge
 
 volumes:
   local_pgdata:
